@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0x81,0xC3,0x30,0xAC,0x8E,0xF9,0x3D,0x54,0x19,0xF8,0x85,0x93,
-		0xF8,0x4A,0xE4,0x22,0x7B,0xD4,0x8F,0x25,0xAC,0xDC,0x21,0xE6,
-		0x70,0xB5,0x1D,0x01,0x7C,0x8F,0x75,0xE9,0xEC,0xA2,0x48,0x0A,
-		0xD3,0xFC,0x8B,0xA0,0xFE,0x77,0x21,0x5D,0xDD,0x76,0x4C,0x65,
-		0xAB,0x09,0x0D,0x0D,0x64,0x92,0xFD,0xB3,0xDA,0x37,0xB9,0x0B,
-		0x39,0xDC,0xC6,0x6B,
+		0x8A,0x10,0xFF,0x62,0x71,0x55,0xC2,0x7A,0xAF,0xF9,0x9B,0x5E,
+		0x7F,0xFF,0xBF,0x22,0x44,0x18,0x5F,0x07,0x82,0x91,0xBE,0xDC,
+		0xFF,0xEB,0x6E,0x95,0xA3,0xB1,0xA3,0x88,0x5C,0x93,0xFE,0x94,
+		0x77,0x6D,0xA3,0x84,0x40,0xAC,0xBF,0x4C,0x46,0xC2,0x9B,0x33,
+		0xFC,0xBE,0x3E,0x93,0x38,0xEC,0xC6,0x45,0xB7,0x3F,0xDF,0x4E,
+		0x23,0xFA,0x5C,0x73,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
