@@ -6,6 +6,7 @@ NRPE Changelog
 2.1 - ??/??/2003
 ----------------
 - Host names can now be specified in allowed host list
+- Configure script patch for getopt_long on Solaris
 
 
 2.0 - 09/08/2003
